--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Autoescola Albuquerque - Sistema</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/fav.png">
+  <link rel="icon" type="image/x-icon" href="https://autoescolaalbuquerque.com/images/fav.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
